[gd_scene load_steps=6 format=3 uid="uid://qayckfv40ygw"]

[ext_resource type="FontFile" uid="uid://chambj21cikbp" path="res://ASSETS/Font/ProtestGuerrilla-Regular.ttf" id="1_0pqbf"]
[ext_resource type="Script" path="res://SRC/main_menu.gd" id="1_4r1g1"]

[sub_resource type="LabelSettings" id="LabelSettings_4hdq7"]
font = ExtResource("1_0pqbf")
font_color = Color(0.329412, 1, 0.890196, 1)

[sub_resource type="SystemFont" id="SystemFont_6r0ga"]
font_names = PackedStringArray("C059")

[sub_resource type="LabelSettings" id="LabelSettings_k2j3u"]
font = SubResource("SystemFont_6r0ga")
font_size = 10
font_color = Color(0.321569, 1, 0.886275, 1)

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4r1g1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Main menu" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Titile" type="Label" parent="VBoxContainer/Main menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.061
anchor_right = 2.02
offset_left = 70.1
offset_top = -20.0
offset_right = -71.0
offset_bottom = 3.0
text = "The worse game ever"
label_settings = SubResource("LabelSettings_4hdq7")
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Main menu"]
layout_mode = 0
offset_left = -109.0
offset_top = 146.0
offset_right = 114.0
offset_bottom = 169.0
text = "Copyright Â© TigerClips1 2024"
label_settings = SubResource("LabelSettings_k2j3u")

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "StartGame"

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Control" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
